# skeleton-challenge

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PYCHARM_DEBUG_GUIDE.md  README.md  TYPING_GUIDE.md  pyproject.toml  pytest.ini
.serena/: project.yml
.serena/memories/: domain_base_models_guide.md  environment_configuration_guide.md  test_builders_guide.md
src/: __init__.py
src/challenge/: __init__.py  __main__.py
src/challenge/api/: __init__.py  dependencies.py  main.py
src/challenge/api/routes/: health.py
src/challenge/challenges/: __init__.py
src/challenge/core/: config.py  exceptions.py
src/challenge/domain/: base_models.py
src/challenge/domain/value_objects/: __init__.py
src/challenge/infrastructure/: __init__.py
src/challenge/infrastructure/clients/: __init__.py
src/challenge/models/: __init__.py
src/challenge/presentation/: __init__.py  main.py
src/challenge/presentation/api/: __init__.py
src/pindrop_challenge/: __init__.py
src/pindrop_challenge/domain/: __init__.py  base_models.py  errors.py
src/pindrop_challenge/domain/entities/: __init__.py
src/pindrop_challenge/domain/interfaces/: __init__.py
src/pindrop_challenge/domain/services/: __init__.py
src/pindrop_challenge/domain/value_objects/: __init__.py
src/pindrop_challenge/infrastructure/: __init__.py
src/pindrop_challenge/infrastructure/clients/: __init__.py
src/pindrop_challenge/infrastructure/utils/: __init__.py
src/pindrop_challenge/presentation/: __init__.py  main.py
src/pindrop_challenge/presentation/api/v1/: __init__.py  health.py
tests/: __init__.py  builders.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_placeholder.py
tests/unit/domain/: __init__.py
tests/unit/infrastructure/: __init__.py
tests/unit/presentation/: __init__.py
tests/unit/presentation/api/v1/: test_health.py
